# promptex

./: .coderabbit.yaml  .cta.json  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  IMPLEMENTATION_STATUS.md  LICENSE  PLAN.md  PRODUCT.md  README.md  drizzle.config.ts  package.json  vitest.config.ts
.agents/skills/pmtx/: SKILL.md
.agents/skills/prompt-history/: SKILL.md
.claude/skills/pmtx/: SKILL.md
.claude/skills/prompt-history/: SKILL.md
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
drizzle/: 0000_loving_shatterstar.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
scripts/: sync-skill.sh
skills/pmtx/: SKILL.md
skills/prompt-history/: SKILL.md
skills/prompt-history/references/: rendering-rules.md
src/: config.rs  main.rs  project_id.rs  prompt.rs  routeTree.gen.ts  router.tsx  styles.css
src/analysis/: correlation.rs  git.rs  mod.rs  scope.rs
src/commands/: check.rs  clean.rs  curate.rs  extract.rs  format.rs  grab.rs  mod.rs  profile.rs  projects.rs  record.rs  status.rs
src/curation/: categorize.rs  filter.rs  mod.rs  redact.rs  sanitize.rs
src/extractors/: claude_code.rs  codex.rs  cursor.rs  detection.rs  gemini.rs  manual.rs  mod.rs  opencode.rs  test_contract.rs  traits.rs
src/journal/: entry.rs  mod.rs  reader.rs  writer.rs
src/lib/: constants.ts  utils.ts
src/output/: interactive.rs  json_format.rs  markdown_format.rs  mod.rs  pr_format.rs
src/routes/: __root.tsx  _authed.tsx  index.tsx  login.tsx
src/services/: agentic.rs  extractor.rs  generator.rs  github.rs  mod.rs  tools.rs
tests/: README.md
tests/helpers/: db.ts
tests/unit/: auth.test.ts  schema.test.ts  utils.test.ts
(+24 files in other folders)
