[package]
name = "issuance"
version = "0.1.0"
edition = "2021"
authors = ["Jesus <you@example.com>"]
description = "A context orchestrator for AI-assisted open source contributions"
license = "MIT"

[[bin]]
name = "issuance"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
octocrab = "0.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tera = "1"
indicatif = "0.17"
console = "0.15"
anyhow = "1"
dirs = "5"
url = "2.5.8"
