[package]
name = "promptex"
version = "0.2.0"
edition = "2021"
authors = ["Jesus Gutierrez <gutierrezje.work@gmail.com>"]
description = "Extract and curate AI prompts for your pull requests"
license = "MIT"

[[bin]]
name = "pmtx"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

[dev-dependencies]
tempfile = "3.8"
filetime = "0.2"

